<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tag.localnotificationdemo.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etMainNotificationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notification_title" />

            <EditText
                android:id="@+id/etMainNotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_your_text_here" />


            <Button
                android:id="@+id/btnMainSendSimpleNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/send_simple_notification" />

            <Button
                android:id="@+id/btnMainSendExpandLayoutNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send_expand_layout_notification" />

            <Button
                android:id="@+id/btnMainSendNotificationActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send_notification_with_action_buttons" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnMainSendMaxPriorityNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/send_max_priority_notification" />

                <Button
                    android:id="@+id/btnMainSendMinPriorityNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/send_min_priority_notification" />

            </LinearLayout>

            <Button
                android:id="@+id/btnMainSendCombinedNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/send_combined_notification" />

            <Button
                android:id="@+id/btnMainClearAllNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_all_notification" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
